--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
 
-  lint:
+  test:
 
     strategy:
       matrix:
@@ -15,27 +15,24 @@ jobs:
 
     steps:
 
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Node ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Set up Node ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Use npm cache
-      uses: actions/cache@v2
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
+      - name: Use npm cache
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
 
-    - name: Install dependencies
-      run: npm install
+      - name: Test code quality
+        run: npm test
 
-    - name: lint code
-      run: npm run lint
-
-  test:
+  report-coverage:
 
     strategy:
       matrix:
@@ -63,11 +60,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Test code
-        run: npm run test
-
       - name: Generate coverage report
-        run: npx tap --coverage-report=text-lcov > coverage.lcov
+        run: npm run test:tap && npx tap --coverage-report=text-lcov > coverage.lcov
 
       - name: Report coverage to Codacy
         uses: codacy/codacy-coverage-reporter-action@master
