--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,6 @@ indent_style = space
 indent_size = 2
 insert_final_newline = true
 
-[*.{js,json,css,html}]
+[*.{js,css,html}]
 indent_style = tab
 tab_width = 4
