--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
     
     runs-on: ${{ matrix.os }}
 
