--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -7,9 +7,15 @@ jobs:
   test:
 
     strategy:
+      fail-fast: false
       matrix:
         node-version: [14.x]
         os: [ubuntu-latest, windows-latest, macOS-latest]
+        include:
+          - node-version: 12.x
+            os: ubuntu-latest
+          - node-version: 15.x
+            os: ubuntu-latest
 
     runs-on: ${{ matrix.os }}
 
@@ -35,6 +41,7 @@ jobs:
   report-coverage:
 
     strategy:
+      fail-fast: false
       matrix:
         node-version: [14.x]
         os: [ubuntu-latest]
