--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "eslint": "^7.21.0",
     "eslint-plugin-promise": "^4.3.1",
     "tap": "^14.11.0"
+  },
+  "engines": {
+    "node": "^12.x || ^14.x || ^15.x"
   }
 }
