Require JSDoc comments
Requires JSDoc comments for all files and functions, greatly improving documentation

--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
   "homepage": "https://github.com/atjn/eslint-config#readme",
   "peerDependencies": {
     "eslint": "^7.26.0",
+    "eslint-plugin-jsdoc": "^34.0.1",
     "eslint-plugin-promise": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
+    "eslint-plugin-jsdoc": "^34.0.1",
     "eslint-plugin-promise": "^5.1.0",
     "tap": "^15.0.9"
   },
